# Canvas

./: .gitignore  CMakeLists.txt  Canvas.cbp  Canvas.depend  Canvas.layout  Makefile  README.md  bool.h  build.pl  core.h  interface.h  m  main.cpp  object.h  scalar.h  traits.h
include/: alloc.h  aop.h  bool.h  certainly.h  core.h  interface.h  marco.h  object.h  publish.rb  ranges.h  ropto.hpp  scalar.h  tpl.h  traits.h  unittest.h  utility.h
include/box/: box.h
include/collect/: algo.h  base.h  common.h  sequence.h
include/marco/: common.h  enum.h  list.h
include/ropto/: Base64.hpp  ByteStream.hpp  Serializer.hpp  SerializerSupport.hpp
include/tpl/: boolean.h  debug.h  func.h  list.h  loop.h  natural.h  prop.h
include/trusct/: Schema.h
nbproject/: configurations.xml  project.xml
src/: Collect.Base.cpp  ENUM_STR_TESTS.cpp  TPL_TESTS.cpp  TestSuite.cpp  alloc.cpp  aop_test.cpp  collect_list_test.cpp  dummy.cpp  object.cpp  prop_test.cpp  ropto.Base64.cpp  ropto.ByteStream.cpp  tpl_func_test.cpp  tpl_nat_test.cpp  trusct.Schema.cpp
test/: TestSuite.cpp  any_test.cpp  bigdecimal_test.cpp  main.cpp  marco_enum_test.cpp  ropto_test.cpp  suite
